# rustybot

./: .gitignore  Cargo.toml  README.md
src/: event_handler.rs  main.rs  parser.rs
src/discord/: commands.rs  event_handler.rs  helpers.rs  mod.rs
