[package]
name = "rusty-discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = "0.11"
clap = {version = "3.2.14", features = ["derive"]}
tokio = {version = "1.20.0", features = ["rt", "rt-multi-thread", "macros"]}
